# whl-file

./: delayed_assert-0.3.2-py3-none-any.whl  softest-1.2.0.0-py3-none-any.whl
chardet-3.0.4.dist-info/: RECORD
request-2019.4.13/request-2019.4.13/: PKG-INFO  README.md  setup.cfg
