[metadata]
name = request
version = 2019.4.13
url = https://github.com/looking-for-a-job/request.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = request http

[options]
install_requires = 
	get
	post
	setuptools
packages = 
	request

[egg_info]
tag_build = 
tag_date = 0

